...
                    .focusRequester(FocusRequester.Default)
                    .onFocusChanged { onReadyToSearch(it.isFocused) }
                    .clip(RoundedCornerShape(50))
                    .background(Color.White)
                    .weight(1f)
                    .minimumInteractiveComponentSize()
                    .testTag("Search Bar"),
                value = searchQuery,

                singleLine = true,
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Text,
                    imeAction = ImeAction.Search,
...
